data/derived/comb/progs/unify/prog6768.ml.out
Characters 75-101:
  else bigAdd ( l, mulByDigit( i-1, l) );;
              ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
